--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Exo+2');
-
-$font-primary: 'Exo 2';
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+$font-primary: 'Roboto';//'Exo 2';
+$bg-body: #404040;
+$color-primary: #ccc;
+$color-accent-blue: #9cf;
+$color-accent-orange: #c93;
 
 html, body {
   min-height: 100vh;
@@ -8,10 +12,34 @@ html, body {
 
 body {
   font: 16px verdana;
-  color: e0e0e0;
+  color: $color-primary;
   background: #404040;
   min-height: 100%;
 }
+
+h2 {
+  font: 1.5rem verdana;
+  color: $color-accent-blue;
+  //background: #066;
+  letter-spacing: 1px;
+  width: 80%;
+  height: 3rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  .back {
+    color: #ccc;
+    display: flex;
+    align-items: center;
+    svg {
+      fill: #c0c0c0;
+    }
+    &:hover svg {
+      fill: #eee;
+    }
+  }
+  }
 
 p {
   line-height: 24px;
@@ -20,6 +48,9 @@ p {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+h2 {
 }
 
 .noselect {
