--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,10 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Exo+2');
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-$font-primary: 'Roboto';//'Exo 2';
-$bg-body: #404040;
-$color-primary: #ccc;
-$color-accent-blue: #9cf;
-$color-accent-orange: #c93;
+@import './variables.scss';
 
 html, body {
   min-height: 100vh;
@@ -48,6 +44,10 @@ p {
 a {
   color: inherit;
   text-decoration: none;
+  //transition: letter-spacing .2s;
+
+  &:hover {
+  }
 }
 
 h2 {
