added albums cover; set different configs

--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -3,3 +3,12 @@ $bg-body: #404040;
 $color-primary: #ccc;
 $color-accent-blue: #9cf;
 $color-accent-orange: #c93;
+
+.overlay {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+}
